--- a/paper/00_vorlage_statistik_hausarbeiten.tex
+++ b/paper/00_vorlage_statistik_hausarbeiten.tex
@@ -53,7 +53,7 @@ In diesem Abschnitt sollen zunächst die grundlegenden Begrifflichkeiten für Ge
 
 Grundsätzlich gibt es zwei sich unterscheidenede methodische Ansätze, die bei der Geheimhaltung zum Tragen kommen können [\cite{Nickl}]. Zum einen existieren \textit{informationsreduzierende Methoden}. In der Gattung dieser Verfahren werden durch Aggregation oder Sperrrung kritische Kategorien oder Werte die Aufdeckungsrisiken verhindert. Eine Aggregation meint in diesem Fall das Zusammenfassen zu übergeordneteten Positionen, z.B. durch Summation kleinerer Positionen. Bei einer Sperrung ist auch oft von einer Löschung die Rede. Hier werden gezielt einzelne Werte identifiziert und aus der Tabelle entfernt. Als Kontrast stehen \textit{datenverändernde Methoden} gegenüber. Hier werden durch gezielte Veränderungen der Daten - beispielsweise durch Runden oder Zufallsüberlagerungen - kritische Werte verfälscht, was auch für eine erfolgreiche statistische Geheimhaltung sorgen kann. 
 
-Weiter differenziert man Geheimhaltungsverfahren auch nach dem Zeitpunkt ihrer Durchführung. Die Daten können bereits vor der Tabellierung mit einer Geheimhaltung versehen werden. Man spricht hier von \textit{pre-tabulare Verfahren} [\cite{Rothe-1}]. Diese Verfahren werden als Anonymisierung bezeichnet, da die Daten im Vorfeld so verändert werden, dass keine kritischen Ergebnisse resultieren. Oftmals ist diese Art von Geheimhaltung aber nicht ausreichend, weshalb weitere Verfahren im Anschluss angewandt werden müssen. Man spricht nun von \textit{post-tabulare Verfahren} [\cite{Rothe-1}]. Ihre Mechanismen werden auf die ferig tabellierten Daten angewandt.
+Weiter differenziert man Geheimhaltungsverfahren auch nach dem Zeitpunkt ihrer Durchführung. Die Daten können bereits vor der Tabellierung mit einer Geheimhaltung versehen werden. Man spricht hier von \textit{pre-tabulare Verfahren} [\cite{Rothe-1}]. Diese Verfahren werden als Anonymisierung bezeichnet, da die Daten im Vorfeld so verändert werden, dass keine kritischen Ergebnisse resultieren. Oftmals ist diese Art von Geheimhaltung aber nicht ausreichend, weshalb weitere Verfahren im Anschluss angewandt werden müssen. Man spricht nun von \textit{post-tabulare Verfahren} [\cite{Rothe-1}]. Ihre Mechanismen werden auf die fertig tabellierten Daten angewandt.
 
 
 \subsection{Statistische Tabellen}
@@ -88,9 +88,15 @@ Gegenstand der Geheimhaltung stellen in dieser Arbeit statistische Tabellen dar.
 
 \subsection{Bewährte Ansätze}
 
-Nachdem nun die grundlegenden Begriffe im Zusammenhang mit der Geheimhaltung von statistischen Tabellen erläutert wurden, beschäftigt sich dieser Abschnitt mit bewährten Ansätzen um diese Geheimhaltung durchzuführen. Dabei wird speziell auf die post-tabularen Verfahren für Häufigkeits- und Wertetabelle eingangen.
+Nachdem nun die grundlegenden Begriffe im Zusammenhang mit der Geheimhaltung von statistischen Tabellen erläutert wurden, beschäftigt sich dieser Abschnitt mit bewährten Ansätzen um diese Geheimhaltung durchzuführen. Zunächst werden die Mechanismen für eine pre-tabulare Geheimhaltung - also eine Anonymisierung - beschrieben. Gegenstand der Beachtung sind hier immer die Einzeldatensätze. Es existieren verschiedene Stufen der Anonymität. Diese werden in [\cite{Rothe-1}] wie folgt dargestellt:
+\begin{itemize}
+    \item \textbf{formale Anonymisierung:} Diese Art der Anonymisierung wird intern in den statistischen Landesämtern verwendet. Durch Entfernung aller direkten Identifikatoren [\cite{Nickl}], wie z.B. Name, Adresse oder Matrikelnummer, bleibt der eigentliche Informationsgehalt für die statistischten Auswertungen hoch. 
+    \item \textbf{faktische Anonymisierung:} Für die unabhängige wissschaftliche Forschung werden die Daten so bearbeitet, dass unter realistischen Rahmenbedingungen keine erfolgreiche Identifikation möglich ist [\cite{Nickl}].
+    \item \textbf{absolute Anonymisierung:} Diese Variante bietet den höchsten Informationsverlust, stellt im Gegenzug aber sicher, dass unter keinen Umständen eine Reidentifikation vorgenommen werden kann [\cite{Nickl}]. Damit ist dieser Ansatz zu wählen, wenn die Tabellen an die breite Öffentlichkeit weitergeben werden sollen.
+\end{itemize}
+Bei allen drei Optionen ist das darunterliegende Vorgehen identisch. Im ersten Schritt wird immer die jeweilige Anonymisierung auf die Einzeldatensätze angewandt. Anschlie\ss end werden die statistischen Tabellen generiert. Für weitere Einzelheiten sei an dieser Stelle auf [\cite{Rothe-1}] verwiesen.
 
-Am Anfangs eines jeden Geheimhaltungsverfahrens stehen die sog. \textit{Geheimhaltungsregel}, die eine Identifizierung kritischer Fälle erlauben. Eine Standardansatz in der amtlichen Statistik stellt hier die \textit{Mindestfallzahlregel} [\cite{Rothe-1}] dar. Diese Regel lässt sich auf Häufigkeitstabelle anwenden, indem die kritischen Fälle mit einem zuvor festgelegten Wert $n$ verglichen werden. Meist wird hier $n = 3$ gewählt [\cite{Rothe-1}]. Ist der betrachtete Tabellenwert kleiner als der Wert $n$, so ist dieser Tabellenwert geheimzuhalten. Für Wertetabellen hingegen lässt sich beispielsweise die \textit{p-\% Regel} anwenden [\cite{Rothe-2}]. Dieser Ansatz besagt, dass ein Tabellenwert $x$ geheimzuhalten ist, wenn 
+Im Weiteren wird speziell auf die post-tabularen Verfahren für Häufigkeits- und Wertetabelle eingangen. Am Anfangs eines jeden Geheimhaltungsverfahrens stehen die sog. \textit{Geheimhaltungsregel}, die eine Identifizierung kritischer Fälle erlauben. Eine Standardansatz in der amtlichen Statistik stellt hier die \textit{Mindestfallzahlregel} [\cite{Rothe-1}] dar. Diese Regel lässt sich auf Häufigkeitstabelle anwenden, indem die kritischen Fälle mit einem zuvor festgelegten Wert $n$ verglichen werden. Meist wird hier $n = 3$ gewählt [\cite{Rothe-1}]. Ist der betrachtete Tabellenwert kleiner als der Wert $n$, so ist dieser Tabellenwert geheimzuhalten. Für Wertetabellen hingegen lässt sich beispielsweise die \textit{p-\% Regel} anwenden [\cite{Rothe-2}]. Dieser Ansatz besagt, dass ein Tabellenwert $x$ geheimzuhalten ist, wenn 
 
 \begin{align}
     x - x_2 - x_1 < \frac{p}{100} \cdot x_1
@@ -109,9 +115,9 @@ Um letztlich auch die Geheimhaltung durchzuführen wird unter diesen Regeln oft 
 
 Die im vorherigen Kapitel beschrieben Geheimhaltungsverfahren müssen in der Regel - zumindest bis zu einem gewissen Grad - manuell durchgeführt werden und eine Automatisierung ist eher unfelxibel. Mit der \textit{Cell Key Methode (CKM)} wird ein Geheimhaltungsverfahren präsentiert, welches gut zu automatisieren und vergleichsweise einfach zu implementieren ist. Die Cell Key Methode ist auch als \textit{ABS-Verfahren} bekannt. Der Name stammt von der schöpfenden Institutuion des Verfahrens, dem Australian Bureau of Statistics, ab. Durch die Verwendung von zufallsbasierten Additionen, den sog. Überlagerungen, werden Datenwerte verschleiert. Der Ermittlung einer solchen zufallsbasierten Addition liegt eine einmalig festzulegende Wahrscheinlichkeitsverteilung mit den möglichen Überlagerungswerten zugrunde [\cite{Enderle}]. Für die Bestimmung dieser Überlagerungen wird ein deterministischer Mechaniusmus eingesetzt. Dieser nutzt den original Zellwert und den sog. Cell-Key um aus der Verteilung der Überlagerungswerte eine eindeutige Überlagerung zu ziehen [\cite{Enderle}]. Eine mit dem CKM Verfahren geheimgehaltene Tabelle veröffentlicht also die Summe aus Originalwerten und Überlagerungen. Die CKM zählt damit zu den datenveränderndeden Verfahren.
 
-\subsection{Verfahrensparamter und Überlagerungsmatrix}
+\subsection{Verfahrensparameter und Überlagerungsmatrix}
 
-An statistische Geheimhaltungsverfahren, insbesondere den datenverändernden Verfahren, werde bestimmte Anforderungen gestellt. Für die Cell Key Methode werden in der amtlichen Statistik gewisse stochastische Eigenschfaten gefordert, um die Qualität und Nachvollziehbarkeit der Ergebnisse zu sichern. Zu diesen Eigenschaften zählt einerseits die Unverzerrtheit der Überlagerungen [\cite{Enderle}]. Damit meint man, dass der Überlagerungswert, welcher zu den Originalwerten addiert wird, im Mittel gleich Null ist. Es soll also die Erwartungstreue $E(z) = 0$ gelten. Darüber hinaus fodert man ebenfalls eine konstante Streuung der Verteilung der Überlagerungen [\cite{Enderle}]. Es soll die Varianz erhalten bleiben, also $Var(z) = s^2$ gelten. Um diese beiden Eigenschaften zu kokretisieren, werden Verfahrensparamter eingeführt. Diese dienen weiter auch dazu das Geheimhaltungsverfahren - und damit die Überlagerungen - an verschiedene Kontexte anzupassen. Zu diesen Verfahrensparamter zählen nach [\cite{Höhne}]:
+An statistische Geheimhaltungsverfahren, insbesondere den datenverändernden Verfahren, werde bestimmte Anforderungen gestellt. Für die Cell Key Methode werden in der amtlichen Statistik gewisse stochastische Eigenschfaten gefordert, um die Qualität und Nachvollziehbarkeit der Ergebnisse zu sichern. Zu diesen Eigenschaften zählt einerseits die Unverzerrtheit der Überlagerungen [\cite{Enderle}]. Damit meint man, dass der Überlagerungswert, welcher zu den Originalwerten addiert wird, im Mittel gleich Null ist. Es soll also die Erwartungstreue $E(z) = 0$ gelten. Darüber hinaus fodert man ebenfalls eine konstante Streuung der Verteilung der Überlagerungen [\cite{Enderle}]. Es soll die Varianz erhalten bleiben, also $Var(z) = s^2$ gelten. Um diese beiden Eigenschaften zu kokretisieren, werden Verfahrensparameter eingeführt. Diese dienen weiter auch dazu das Geheimhaltungsverfahren - und damit die Überlagerungen - an verschiedene Kontexte anzupassen. Zu diesen Verfahrensparameter zählen nach [\cite{Höhne}]:
 
 \begin{itemize}
     \item Eine boolsche Variable, die angibt, ob Originalwerte $1$ und $2$ geheimgehalten werden sollen.
@@ -128,7 +134,7 @@ Gestand des Interesses sind demnach Zufallsfunktionen $z$, die eine bedingte Wah
     & \sum_{i = -d}^{d} p_i = 1
 \end{align}
 
-schreiben [\cite{Höhne}]. Dabei wird in der letzten Zeile $(4)$ noch gefordert, dass die Summe der Übergangswahrscheinlichkeiten für einen Originalwert gleich $1$ ist. Die Lösung dieses Problems lässt sich in Matrixform notieren. Man spricht hier von der sog. Überlagerungsmatrix mit Zeilen $i$ und Spalten $j$, welche zur Bestimmung der Überlagerungsbeiträge $j$ zu den Originalwerten $i$ verwendet werden kann. Für weitere mathematische Details und Lösungsansätze sei an dieser Stelle auf [\cite{Giessing}] verwiesen. In [\cite{Höhne}] wird die Lösung eines solchen Gleichungssystems für die Verfahrensparamter $p_0 = 0,5 = 50\%$, $d = 4$ und $s = 2,25$ gezeigt. Diese Überlagerungsmatrix ist in Abbildung \ref{matrix_plot} in Form einer Heatmap zu sehen. Der \textit{Python} Code zum Erstellen dieser Grafik ist in Anhang A zu finden.
+schreiben [\cite{Höhne}]. Dabei wird in der letzten Zeile $(4)$ noch gefordert, dass die Summe der Übergangswahrscheinlichkeiten für einen Originalwert gleich $1$ ist. Die Lösung dieses Problems lässt sich in Matrixform notieren. Man spricht hier von der sog. Überlagerungsmatrix mit Zeilen $i$ und Spalten $j$, welche zur Bestimmung der Überlagerungsbeiträge $j$ zu den Originalwerten $i$ verwendet werden kann. Für weitere mathematische Details und Lösungsansätze sei an dieser Stelle auf [\cite{Giessing}] verwiesen. In [\cite{Höhne}] wird die Lösung eines solchen Gleichungssystems für die Verfahrensparameter $p_0 = 0,5 = 50\%$, $d = 4$ und $s = 2,25$ gezeigt. Diese Überlagerungsmatrix ist in Abbildung \ref{matrix_plot} in Form einer Heatmap zu sehen. Der \textit{Python} Code zum Erstellen dieser Grafik ist in Anhang A zu finden.
 
 \begin{figure}[H]
     \begin{center}
@@ -256,18 +262,19 @@ Eine Besonderheit, die sich aus der Verwendung der Cell Key Methode ergibt, ist 
     \label{tab_additivity}
 \end{table}
 
-Diese Nicht-Additivität wird beim Cell Key Verfahren in Kauf genommen, da im Weiteren zwei konkrete Vorteile dieser Methode überwiegen. Das unabhängige und separate Überlagern von Tabellenfeldern führt zu zwei wichtigen Vorteilen dieses Geheimhaltungsverfahrens [\cite{Enderle}]. Zum einen wird eine \textit{tabellenübergreifenede Konsistenz} erreicht. Die zu addierenden Überlagerungswerte zu einem bestimmten Originalwert (z.B. Studierende der Universitätät Bamberg) sind bei gleicher Datengrundlage immer identisch - unabhängig von der Zieltabelle. Dies ergibt sich aus den einmalig zugespielten Record-Keys und dem danach folgenden deterministeischen Lookup-Modul. Der zweite überwiegende Vorteil der CKM ist die \textit{Genauigkeit} des Verfahrens [\cite{Enderle}]. Dieser Punkt beschreibt die Vermeidung von zufällig gleichgerichteten Überlagerungen. Dies würde im Einzelfall zu grö\ss eren Veränderungen zwischen Original- und geheimgehaltenen Wert führen. Durch die Überlagerung aller Tabellenzellen umgeht man diese Gefahr.
+Diese Nicht-Additivität wird beim Cell Key Verfahren in Kauf genommen, da im Weiteren zwei konkrete Vorteile dieser Methode überwiegen. Das unabhängige und separate Überlagern von Tabellenfeldern führt zu diesen wichtigen Vorteilen dieses Geheimhaltungsverfahrens [\cite{Enderle}]. Zum einen wird eine \textit{tabellenübergreifenede Konsistenz} erreicht. Die zu addierenden Überlagerungswerte zu einem bestimmten Originalwert (z.B. Studierende der Universitätät Bamberg) sind bei gleicher Datengrundlage immer identisch - unabhängig von der Zieltabelle. Dies ergibt sich aus den einmalig zugespielten Record-Keys und dem danach folgenden deterministeischen Lookup-Modul. Der zweite überwiegende Vorteil der CKM ist die \textit{Genauigkeit} des Verfahrens [\cite{Enderle}]. Dieser Punkt beschreibt die Vermeidung von zufällig gleichgerichteten Überlagerungen. Dies würde im Einzelfall zu grö\ss eren Veränderungen zwischen Original- und geheimgehaltenen Wert führen. Durch die Überlagerung aller Tabellenzellen umgeht man diese Gefahr.
+
 
 \subsection{Aufdeckungsrisiko}
 
-
+Damit die Cell Key Methode ein sicheres Geheimhaltungsverfahren bleibt, dürfen die Verfahrensparameter unter keinen Umständen der Öffentlichkeit preisgegeben werden. Sind beispielsweise die Maximalabweichung oder die Standardabweichung der Überlagerungen bekannt, so können in Tabellenfeldern, die einen additiven Zusammenhang aufweisen, Rückschlüsse auf die Originalwerte mit Hilfe der Randsummen gezogen werden. Für Details sei hier auf [\cite{Höhne}] und [\cite{Giessing}] verwiesen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\newpage
-\section{Zusammenfassung und Fazit}
+\section{Fazit}
 
-Damit das Bayerische Landesamt für Statistik seiner gesetzlich vorgeschrieben Pflichten nachkommen kann, sind die unterschiedlichsten Technologien und Verfahren notwendig. Neben dem Erheben der Daten bei den Meldern, gehören auch die Plausibilisierung und die Aufbereitung der Daten zu seinen Aufgaben. Um eine so große Datenmenge effizient zu verarbeiten, wird auf moderne Lösungen aus der Informationstechnologie zurückgegriffen. Hierzu zählen verschiedene Skriptsprachen, Datenbanken und Datawarehouses. Um die Qualität der Daten zu wahren, sind neben rein technischer Kontrollen auch sehr fachliche Zusammenhänge zu prüfen und ggf. zu korrigieren. Dies erfordert ein tiefes inhaltliches Verständnis der Daten und ihrer Merkmale. Eine gewisse Interpretation und Analyse sind also auch im Data Engineering notwendig, um die Datenqualität und den Datenfluss zu erhalten, sowie die Daten zu publizieren und damit die Pflicht der amtlichen Statistik zu erfüllen. 
+Mit der Cell Key Methode wurde ein modernes Geheimhaltungsverfahren präsentiert, welches sich durch seine Flexibiltät - auch in der technischen Integration - von bestehenden Geheimhaltungsverfahren unterscheidet. So ist es ein hochatraktives Verfahren zur Gewährleistung der Geheimhaltung in neuen technischen System, wie der Auswertungsdatenbank der amtlichen Hochschulstatistik, oder auch dem anstehenden Zenus. Mit dem Wegfallen von manuellen Geheimhaltungsprozeduren lassen sich qualitativ hochwertige Ergenisse in deutlich kürzerer Zeit und mit übergreifenden Konsistenz veröffentlichen. Allerdings ist auch die Besonderheit der Nicht-Additivität deutlich an die Endnutzer der Daten zu kommunizieren, um eine Missinterpretation der Ergebnisse zu verhindern. Durch die wählbaren Verfahrensparameter, wird das CKM-Verfahren zukünftig sicher auch in anderen Teilen der amtlichen Statistik Einzug finden.
 
 \newpage%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -282,7 +289,7 @@ Damit das Bayerische Landesamt für Statistik seiner gesetzlich vorgeschrieben P
 
 Nachfolgend ist die vollständige \textit{Python} Implementierung des CKM Verfahrens für ein Testbeispiel aus der Hochschulstatistik abgebildet. Für die Werte der Überlagerungsmatrix wurde auf die Literatur zurückgegriffen.
 
-\lstinputlisting[language=Python, caption=CKM Python Beispiel]{../src/ckm.py}
+\lstinputlisting[language=Python, caption=CKM Python Beispiel]{../src/ckm_paper.py}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
