Fixed some typos

--- a/paper/03_literatur_stat_ha.tex
+++ b/paper/03_literatur_stat_ha.tex
@@ -14,6 +14,10 @@ Enderle, Tobias und Meike Vollmar: Geheimhaltung in der Hochschulstatistik. \emp
 Giessing, Sarah: Computational Issues in the Design of Transition Probabilities and Disclosure Risk Estimation for Additive Noise.
 \emph{LNCS}, vol. 9867, Springer International Publishing, 2016.
 
+\bibitem[Giessing, 2019]{Giessing-2} 
+Giessing, Sarah und Reinhard Tent: Concepts for generalising tools implementing the cell key method to the case of continuous variables.
+\emph{CONFERENCE OF EUROPEAN STATISTICIANS}, Joint UNECE/Eurostat Work Session on Statistical Data Confidentiality, 29-31 October 2019, the Hague, the Netherlands.
+
 \bibitem[Höhne, 2019]{Höhne} 
 Höhne, Jörg und Julia Höninger: Die Cell-Key-Methode – ein Geheimhaltungsverfahren. \emph{Statistische Monatshefte Niedersachsen} 1, 2019.
 
